Sockets und TEAMS aktualisiert

--- a/public/service/index.html
+++ b/public/service/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>D'Wädderhäx - Service Scoreboard</title>
   <link rel="stylesheet" href="service.css">
-  <script src="/socket.io/socket.io.js"></script>
+  <!-- Socket.IO Client von CDN -->
+<script src="https://bier-scoreboard-backend.onrender.com/socket.io/socket.io.js"></script>
 </head>
 <body>
 
