--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://bier-scoreboard-backend.onrender.com/socket.io/socket.io.js"></script>
 </head>
 
 <body>
@@ -80,7 +81,6 @@
   </main>
 
   <!-- SCRIPTS -->
-   <script src="/socket.io/socket.io.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/client.js"></script>
