fix service relative paths

--- a/public/service/index.html
+++ b/public/service/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>D'Wädderhäx - Service Scoreboard</title>
-  <link rel="stylesheet" href="service.css">
+  <link rel="stylesheet" href="./service.css">
   <!-- Socket.IO Client von CDN -->
 <script src="https://bier-scoreboard-backend.onrender.com/socket.io/socket.io.js"></script>
 </head>
@@ -194,6 +194,6 @@
   </div>
 </div>
 
-  <script src="service.js"></script>
+  <script src="./service.js"></script>
 </body>
 </html>
