--- a/public/service/login.html
+++ b/public/service/login.html
@@ -63,6 +63,24 @@
     .login-box button.primary {
       width: 100%;
     }
+
+    .show-pass {
+  display: flex;
+  align-items: center;  /* vertikal zentriert */
+  gap: 8px;             /* Abstand zwischen Checkbox und Text */
+  font-size: 0.9rem;
+  color: #aaa;
+  cursor: pointer;
+  user-select: none;
+  margin-bottom: 15px;
+}
+
+.show-pass input[type="checkbox"] {
+  width: 18px;
+  height: 18px;
+}
+
+
   </style>
 </head>
 <body>
