--- a/public/service/index.html
+++ b/public/service/index.html
@@ -75,7 +75,7 @@ togglePass.addEventListener("change", () => {
 });
 
 document.getElementById("loginBtn").addEventListener("click", async () => {
-  const res = await fetch("/service/login", {
+  const res = await fetch("/service", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ password: passwordInput.value })
