--- a/public/service/index.html
+++ b/public/service/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div id="loginBox">
-    <img src="/service/assets/images/logo-colour.png" alt="Logo">
+    <img src="../images/logo-colour.png" alt="Logo">
     <h2>Service Login</h2>
     <input type="password" id="password" placeholder="Passwort">
     <label class="show-password">
