--- a/public/service/index.html
+++ b/public/service/index.html
@@ -26,6 +26,21 @@
       width: 90%;
     }
 
+    #loginBox input[type="password"],
+    #loginBox input[type="text"] {   /* auch text hinzufügen */
+    width: calc(100% - 40px);
+    padding: 10px 12px;
+    font-size: 1rem;
+    border-radius: 10px;
+    border: 1px solid #777;
+    margin-bottom: 15px;
+    background: #222;
+    color: #fff;
+    box-sizing: border-box;       /* wichtig */
+    font-family: inherit;          /* gleiche Schrift wie Panel */
+    }
+
+
     #loginBox img {
       width: 120px;
       margin-bottom: 20px;
