--- a/public/service/index.html
+++ b/public/service/index.html
@@ -4,145 +4,155 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Service Login</title>
-  <link rel="stylesheet" href="/service/assets/service.css">
+  <link rel="stylesheet" href="service/assets/service.css">
   <style>
-    /* Speziell für Login zentriert */
-    body, html {
-      height: 100%;
+    /* Container zentrieren wie im Panel */
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #111; /* wie Panel */
+      background: #111;
+      font-family: Arial, sans-serif;
     }
 
-    #loginBox {
+    .login-box {
       background: rgba(0,0,0,0.55);
-      border: 2px solid #aa0000;
       border-radius: 16px;
-      padding: 30px 25px;
-      text-align: center;
-      box-shadow: 0 0 18px rgba(255,255,255,0.2);
-      max-width: 300px;
-      width: 90%;
+      padding: 30px 40px;
+      box-shadow: 0 0 20px rgba(255,0,0,0.3);
+      border: 2px solid #aa0000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 320px;
     }
 
-    #loginBox input[type="password"],
-    #loginBox input[type="text"] {   /* auch text hinzufügen */
-    width: calc(100% - 40px);
-    padding: 10px 12px;
-    font-size: 1rem;
-    border-radius: 10px;
-    border: 1px solid #777;
-    margin-bottom: 15px;
-    background: #222;
-    color: #fff;
-    box-sizing: border-box;       /* wichtig */
-    font-family: inherit;          /* gleiche Schrift wie Panel */
-    }
-
-
-    #loginBox img {
-      width: 120px;
+    .login-box img {
+      height: 60px;
       margin-bottom: 20px;
     }
 
-    #loginBox h2 {
-      margin-bottom: 20px;
+    .login-box h2 {
       color: #fff;
-      font-weight: 700;
-      font-size: 1.2rem;
+      margin-bottom: 20px;
     }
 
-    #loginBox input[type="password"] {
-      width: calc(100% - 40px);
+    .password-wrapper {
+      position: relative;
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    .password-wrapper input {
+      width: 100%;
       padding: 10px 12px;
-      font-size: 1rem;
       border-radius: 10px;
       border: 1px solid #777;
-      margin-bottom: 15px;
       background: #222;
       color: #fff;
+      font-size: 1rem;
+      box-sizing: border-box;
+      font-family: inherit;
     }
 
-    #loginBox .show-password {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      gap: 8px;
-      margin-bottom: 20px;
-      font-size: 0.9rem;
-      color: #fff;
+    .password-wrapper button {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: #aaa;
+      font-size: 1.2rem;
       cursor: pointer;
-      user-select: none;
     }
 
-    #loginBox button {
+    .login-box .btn {
       width: 100%;
-      height: 48px;
-      font-size: 0.8rem;
-      font-weight: 700;
-      border-radius: 10px;
+      padding: 12px 0;
       background: #aa0000;
       border: none;
+      border-radius: 10px;
       color: #fff;
+      font-weight: 700;
       cursor: pointer;
-      transition: background 0.2s;
+      font-size: 1rem;
     }
 
-    #loginBox button:hover {
+    .login-box .btn:hover {
       background: #cc0000;
     }
 
-    #loginError {
-      color: #f66;
-      font-size: 0.85rem;
-      margin-top: 10px;
-      display: none;
+    .input-hint {
+      font-size: 0.8rem;
+      color: #bbb;
+      margin-top: -12px;
+      margin-bottom: 12px;
+      text-align: center;
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
-  <div id="loginBox">
-    <img src="./images/logo-colour.png" alt="Logo">
+
+  <div class="login-box">
+    <img src="images/logo-colour.png" alt="Logo">
     <h2>Service Login</h2>
-    <input type="password" id="password" placeholder="Passwort">
-    <label class="show-password">
-      <input type="checkbox" id="togglePassword"> Passwort anzeigen
-    </label>
-    <button id="loginBtn">Einloggen</button>
-    <div id="loginError">Falsches Passwort</div>
+
+    <div class="password-wrapper">
+      <input id="passwordInput" type="password" placeholder="Passwort">
+      <button type="button" id="togglePassword">👁️</button>
+    </div>
+
+    <div class="input-hint">Passwort anzeigen</div>
+
+    <button class="btn" id="loginBtn">Login</button>
   </div>
 
   <script>
-    const passwordInput = document.getElementById("password");
-    const togglePassword = document.getElementById("togglePassword");
+    const passwordInput = document.getElementById("passwordInput");
+    const toggleBtn = document.getElementById("togglePassword");
     const loginBtn = document.getElementById("loginBtn");
-    const loginError = document.getElementById("loginError");
 
-    togglePassword.addEventListener("change", () => {
-      passwordInput.type = togglePassword.checked ? "text" : "password";
-    });
-
-    loginBtn.addEventListener("click", async () => {
-      loginError.style.display = "none";
-
-      const res = await fetch("/service/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ password: passwordInput.value })
-      });
-
-      if (res.ok) {
-        window.location.href = "/service/panel";
+    // Passwort sichtbar machen / maskieren
+    toggleBtn.addEventListener("click", () => {
+      if (passwordInput.type === "password") {
+        passwordInput.type = "text";
       } else {
-        loginError.style.display = "block";
+        passwordInput.type = "password";
       }
     });
 
-    // Enter-Taste
-    passwordInput.addEventListener("keydown", (e) => {
+    // Login senden
+    loginBtn.addEventListener("click", () => {
+      const password = passwordInput.value;
+
+      fetch("/service", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ password })
+      })
+      .then(res => {
+        if (res.ok) {
+          window.location.href = "/service/panel";
+        } else {
+          alert("Falsches Passwort");
+        }
+      })
+      .catch(err => {
+        console.error(err);
+        alert("Fehler beim Login");
+      });
+    });
+
+    // Enter-Taste unterstützt Login
+    passwordInput.addEventListener("keyup", (e) => {
       if (e.key === "Enter") loginBtn.click();
     });
   </script>
+
 </body>
 </html>
