--- a/public/service/index.html
+++ b/public/service/index.html
@@ -83,7 +83,7 @@
 </head>
 <body>
   <div class="login-box">
-    <img src="assets/logo-colour.png" alt="Logo">
+    <img src="./images/logo-colour.png" alt="Logo">
     <h2>Service Login</h2>
 
     <input type="password" id="password" placeholder="Passwort eingeben">
