--- a/public/service/index.html
+++ b/public/service/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Service Login</title>
-  <link rel="stylesheet" href="service.css">
+  <link rel="stylesheet" href="assets/service.css">
   <style>
     body {
       display: flex;
@@ -86,11 +86,23 @@
     <img src="./images/logo-colour.png" alt="Logo">
     <h2>Service Login</h2>
 
-    <input type="password" id="password" placeholder="Passwort eingeben">
+<div style="position: relative; width: 100%;">
+  <input type="password" id="password" placeholder="Passwort eingeben"
+         style="width: 100%; padding-right: 36px; border-radius: 8px; border: 1px solid #777; background: #111; color: #fff; font-size:1rem; box-sizing: border-box;">
+  
+  <span id="togglePasswordIcon" style="
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        font-size: 1.2rem;
+        color: #aaa;
+      ">
+    🔒
+  </span>
+</div>
 
-    <label class="show-pass">
-      <input type="checkbox" id="togglePassword"> Passwort anzeigen
-    </label>
 
     <button class="primary" id="loginBtn">Login</button>
   </div>
@@ -99,28 +111,33 @@
     const input = document.getElementById("password");
     const toggle = document.getElementById("togglePassword");
     const loginBtn = document.getElementById("loginBtn");
+    const passwordInput = document.getElementById("password");
+    const toggleIcon = document.getElementById("togglePasswordIcon");
 
-    // Passwort anzeigen / ausblenden
-    toggle.addEventListener("change", () => {
-      input.type = toggle.checked ? "text" : "password";
-    });
+toggleIcon.addEventListener("click", () => {
+  const isPassword = passwordInput.type === "password";
+  passwordInput.type = isPassword ? "text" : "password";
+  toggleIcon.textContent = isPassword ? "🔓" : "🔒";
+});
+
 
     // Login
-    loginBtn.addEventListener("click", () => {
-      fetch("https://bier-scoreboard-backend.onrender.com/service/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ password: input.value })
-      })
-      .then(res => {
-        if (res.ok) {
-          window.location.href = "/service"; // Weiter zum Panel
-        } else {
-          alert("Falsches Passwort");
-        }
-      })
-      .catch(() => alert("Fehler beim Login"));
-    });
+loginBtn.addEventListener("click", () => {
+  fetch(`${API_BASE}/service/login`, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ password: input.value }),
+    credentials: "include"   // ✅ sehr wichtig
+  })
+  .then(res => {
+    if (res.ok) {
+      window.location.href = "/service"; // leitet korrekt auf das Panel weiter
+    } else {
+      alert("Falsches Passwort");
+    }
+  })
+  .catch(() => alert("Fehler beim Login"));
+});
 
     // Enter-Taste unterstützt Login
     input.addEventListener("keydown", (e) => {
