--- a/public/service/index.html
+++ b/public/service/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
   <div class="login-box">
-    <img src="./images/logo-colour.png" alt="Logo">
+    <img src="../images/logo-colour.png" alt="Logo">
     <h2>Service Login</h2>
 
 <div class="password-wrapper">
